[tool.poetry]
name = "health-indicators"
version = "0.0.1"
description = "A unified collection of health indices and indicators"
authors = ["Joseph Hernandez <jshernandez05@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jshernandez05/health-indicators"
repository = "https://github.com/jshernandez05/health-indicators"
keywords = ["health", "indicators", "indices", "bmi", "bodymass"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
